Corrige dashboard.xhtml y DashboardController.java para mostrar datos y gráficos correctamente

--- a/src/main/webapp/pages/dashboard.xhtml
+++ b/src/main/webapp/pages/dashboard.xhtml
@@ -15,7 +15,7 @@
                     <h:outputText value="#{dashboardController.totalProductos}" style="font-size:24px"/>
                 </p:panel>
 
-                <p:panel header="Stock Bajo (&lt; 10)">
+                <p:panel header="Stock Bajo (< 10)">
                     <h:outputText value="#{dashboardController.productosStockBajo}" style="font-size:24px"/>
                 </p:panel>
 
