--- a/src/main/webapp/pages/producto.xhtml
+++ b/src/main/webapp/pages/producto.xhtml
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
 <h:head>
     <title>Productos</title>
 </h:head>
@@ -10,36 +12,36 @@
         <h3>Filtros</h3>
         <p:panelGrid columns="4" columnClasses="label,field,label,field" style="margin-bottom:10px;">
             <h:outputLabel value="Nombre:"/>
-            <p:inputText value="#{productoController.nombreFiltro}"/>
+            <p:inputText value="#{productoView.nombreFiltro}"/>
 
             <h:outputLabel value="Categoría:"/>
-            <p:inputText value="#{productoController.categoriaFiltro}"/>
+            <p:inputText value="#{productoView.categoriaFiltro}"/>
 
             <h:outputLabel value="Precio Min:"/>
-            <p:inputText value="#{productoController.precioMinFiltro}" />
+            <p:inputText value="#{productoView.precioMinFiltro}" />
 
             <h:outputLabel value="Precio Max:"/>
-            <p:inputText value="#{productoController.precioMaxFiltro}" />
+            <p:inputText value="#{productoView.precioMaxFiltro}" />
 
             <h:outputLabel value="Activo:"/>
-            <p:selectBooleanCheckbox value="#{productoController.activoFiltro}" />
+            <p:selectBooleanCheckbox value="#{productoView.activoFiltro}" />
 
             <h:outputLabel value="Desde:"/>
-            <p:calendar value="#{productoController.desdeFiltro}" pattern="yyyy-MM-dd" showButtonPanel="true"/>
+            <p:calendar value="#{productoView.desdeFiltro}" pattern="yyyy-MM-dd" showButtonPanel="true"/>
 
             <h:outputLabel value="Hasta:"/>
-            <p:calendar value="#{productoController.hastaFiltro}" pattern="yyyy-MM-dd" showButtonPanel="true"/>
+            <p:calendar value="#{productoView.hastaFiltro}" pattern="yyyy-MM-dd" showButtonPanel="true"/>
         </p:panelGrid>
 
-        <p:commandButton value="Buscar" action="#{productoController.buscar}" update="tablaProductos"/>
-        <p:commandButton value="Nuevo Producto" action="#{productoController.nuevo}"
+        <p:commandButton value="Buscar" action="#{productoView.buscar}" update="tablaProductos"/>
+        <p:commandButton value="Nuevo Producto" action="#{productoView.nuevo}"
                          oncomplete="PF('dlgProducto').show()"/>
     </h:form>
 
-    <p:dataTable id="tablaProductos" var="p" value="#{productoController.productos}"
-                 paginator="true" rows="#{productoController.pageSize}" rowsPerPageTemplate="5,10,15"
+    <p:dataTable id="tablaProductos" var="p" value="#{productoView.productos}"
+                 paginator="true" rows="#{productoView.pageSize}" rowsPerPageTemplate="5,10,15"
                  paginatorPosition="bottom" currentPageReportTemplate="Mostrando {startRecord} - {endRecord} de {totalRecords}"
-                 selection="#{productoController.productoSeleccionado}" selectionMode="single" rowKey="#{p.id}">
+                 selection="#{productoView.productoSeleccionado}" selectionMode="single" rowKey="#{p.id}">
         <p:column headerText="Nombre" sortBy="#{p.nombre}">
             #{p.nombre}
         </p:column>
@@ -56,9 +58,9 @@
             <h:outputText value="#{p.activo ? 'Sí' : 'No'}"/>
         </p:column>
         <p:column headerText="Acciones">
-            <p:commandButton value="Editar" action="#{productoController.editar(p)}"
+            <p:commandButton value="Editar" action="#{productoView.editar(p)}"
                              oncomplete="PF('dlgProducto').show()" update=":productoForm"/>
-            <p:commandButton value="Eliminar" action="#{productoController.eliminar(p)}" update="tablaProductos"
+            <p:commandButton value="Eliminar" action="#{productoView.eliminar(p)}" update="tablaProductos"
                              onclick="return confirm('¿Desea eliminar este producto?');"/>
         </p:column>
     </p:dataTable>
